# fast-food-api

./: .env  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py
app/: main.py  utils.py
app/containers/: app_container.py  drivers_container.py
app/containers/services/v1/: food_service_container.py  order_service_container.py
app/models/: food.py  food_category.py  order.py  order_foods.py
app/repositories/food_repository/: __init__.py  food_repository.py  food_repository_abc.py
app/repositories/order_repository/: order_repository.py  order_repository_abc.py
app/routes/: __init__.py
app/routes/v1/: __init__.py  food_category_router.py  food_router.py  order_router.py
app/schemas/routes/: food_router_schemas.py  order_router_schemas.py
app/services/v1/: food_service.py  order_service.py
migrations/: env.py
migrations/versions/: 60ed2774255e_order.py  9b5b28a88a3f_food.py
