[tool.poetry]
name = "fast-food-api"
version = "0.1.0"
description = ""
authors = ["yurihartmann <yurihartmann0607@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi-core = { path = "/Users/yurihartmann/PycharmProjects/fastapi-core/dist/fastapi_core-0.0.1.tar.gz", extras=["database", "redis"]}
sqlmodel = "^0.0.8"
dependency-injector = "^4.41.0"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.285"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
